# rustic-nature-of-code

./: Cargo.toml
ch01-vectors/: i_1_random_walk.rs  i_5_gaussian_random_walk copy.rs  i_5_gaussian_random_walk.rs  i_6_exponential_random_walk.rs
